--- a/gradebookng/tool/src/webapp/styles/gradebook-grades.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-grades.css
@@ -545,10 +545,13 @@
   border: 1px solid #bdbdbd;
   min-width: 200px;
   min-height: 100px;
+  max-height: 340px;
   top: 38px;
   background-color: #FFF;
   box-shadow: 1px 1px 2px #AAA;
-  z-index: 40;
+  z-index: 200;
+  overflow: auto;
+  padding-right: 14px;
 } 
 #gradeItemsTogglePanel .hide-me {
   display: none;
@@ -585,7 +588,7 @@
   font-weight: 200;
   color: #999;
 }
-#gradeItemsTogglePanel .gb-item-category-filter-signal {
+#gradeItemsTogglePanel .gb-item-filter-signal {
   height: 1.2em;
   width: 1.2em;
   border: 1px solid #EEE;
@@ -593,6 +596,10 @@
   margin-top: 0.3em;
   position: absolute;
   right: 0;
+}
+#gradeItemsTogglePanel .off .gb-item-filter-signal,
+#gradeItemsTogglePanel .partial .gb-item-filter-signal {
+  background-color: #FFF !important;
 }
 #gradeItemsTogglePanel .gb-item-category-filter,
 #gradeItemsTogglePanel .gb-item-filter,
@@ -616,13 +623,15 @@
   width: 90%;
   width: calc(100% - 20px);
 }
-#gradeItemsTogglePanel .gradebook-filter-partial-signal {
+#gradeItemsTogglePanel .gb-filter-partial-signal {
   display: block;
 
   border-left: 1.2em solid transparent;
   border-right: 0px solid transparent;
   border-bottom: 1.2em solid;
   border-bottom-color: inherit;
+  margin-top: -1px;
+  margin-left: -1px;
 }
 #gradeItemsTogglePanel #showAllGradeItems,
 #gradeItemsTogglePanel #hideAllGradeItems {
@@ -639,6 +648,10 @@
 #gradeItemsTogglePanel .gb-item-filter-group:last-child {
   border-bottom: none;
   margin: 0;
+}
+#gradeItemsTogglePanel .gb-item-filter-group .btn-group {
+  float: right;
+  margin-top: 3px;
 }
 #gradeItemsTogglePanel .gb-item-filter-group .btn-group .btn.dropdown-toggle {
   padding: 0 4px;
@@ -1198,4 +1211,22 @@ and (max-device-width : 736px) {
   overflow-y: scroll;
   overflow-x: hidden;
   max-height:100px;
+}
+
+#gradeTable2 td {
+  text-align: center;
+}
+
+.handsontableInputHolder {
+  text-align: center;
+}
+
+.handsontableInputHolder .out-of {
+  position: absolute;
+  right: 2px;
+  background-color: #FAFAFA;
+  font-size: 0.8em;
+  top: 2px;
+  padding: 0.1em 10px;
+  border-left: 1px solid #EEE;
 }
