CLASSES-2770 align score centered when editing and increase width of the out-of label

--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -33,9 +33,11 @@
   border-left: 1px solid #EEE;
   height: 28px;
   line-height: 28px;
+  padding: 0 14px;
 }
 #gradeTable .handsontableInput {
   line-height: 30px;
+  text-align: center;
 }
 
 #gradeTable .handsontable tr > *:nth-child(1){
