--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -67,6 +67,9 @@
   height: 102px;
 }
 
+#gradeTable thead th {
+  text-align: left;
+}
 #gradeTable thead th .relative {
   height: 100%;
 }
@@ -83,7 +86,7 @@
   white-space: normal;
   text-align: left;
   line-height: 1.2em;
-  display: block;
+  display: inline-block;
   cursor: pointer;
 }
 #gradeTable .gb-title:hover:after {
@@ -201,6 +204,7 @@
   left: 10px;
   top: 5px;
   font-size: 16px;
+  min-width: 16px;
 }
 [class*="gb-flag"] {
   color: #999;
@@ -235,6 +239,12 @@
 }
 .gb-flag-read-only:before {
   content: '\f023';
+}
+#gradeTable th .gb-flag-extra-credit,
+#gradeTable th .gb-external-app {
+  font-size: 1.1em;
+  vertical-align: baseline;
+  display: inline-block;
 }
 #gradeTable th .gb-flag-extra-credit:before {
   color: #999;
@@ -272,6 +282,15 @@
   font-family: "gradebook-icons";
   content: '\f023';
   color: #DDD;
+}
+#gradeTable .gb-read-only .gb-notification.gb-flag-extra-credit:after {
+  font-family: "gradebook-icons";
+  content: '\f0fe';
+  color: rgb(200,144,0);
+  font-size: 10px;
+  position: absolute;
+  right: -5px;
+  bottom: -5px;
 }
 #gradeTable .gb-concurrent-edit .gb-notification:before,
 .gb-flag-concurrent-edit:before {
