CLASSES-2775 update grade cell dropdown menu tooltip

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -150,7 +150,7 @@
                     <div class="btn-group">
                         <a class="btn btn-sm btn-default dropdown-toggle"
                            data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                           wicket:message="title:grade.menulabel" tabindex="-1">
+                           tabindex="-1">
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" role="menu">
@@ -173,7 +173,7 @@
                 <div class="btn-group">
                     <a class="btn btn-sm btn-default dropdown-toggle"
                        data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                       wicket:message="title:grade.menulabel" tabindex="-1">
+                       tabindex="-1">
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right" role="menu">
@@ -326,6 +326,9 @@
         </script>
         <script id="gradeItemSummaryTemplate" type="text/template">
             <wicket:message key="label.toolbar.gradeitemsummary"/>
+        </script>
+        <script id="gradeMenuTooltip" type="text/template">
+            <wicket:message key="grade.menulabel"/>
         </script>
         <script id="captionTemplate" type="text/template">
             <caption id="gradeTableCaption">
