CLASSES-2769 Styling/title for category subtotal columns  - Change the background color of subtotal columns to #FAFAFA  - Slightly lighten the font-color for the in-cell percentages and make them bold  - update the names for these columns to say "[Category Name] Weighted Average"

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -245,7 +245,7 @@
                         {/if}
                         {if defined('category')}
                         <dt><wicket:message key="metadata.category" /></dt>
-                        <dd>${category.title}</dd>
+                        <dd>${category.categoryName}</dd>
                         {/if}
                         {if defined('categoryAverage')}
                         <dt><wicket:message key="metadata.categoryAverage" /></dt>
