Remove gb-view-grade-summary links and caption links from tabindex

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -218,7 +218,7 @@
             <div class="relative">
                 <div class="gb-value">
                     <div class="rowHeader">
-                        <a href="javascript:void(0);" class="gb-view-grade-summary">
+                        <a href="javascript:void(0);" class="gb-view-grade-summary" tabindex="-1">
                             {if settings.isStudentOrderedByLastName}
                                 <span class="gb-last-name">${lastName}</span>,
                                 <span class="gb-first-name">${firstName}</span>
