--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -34,26 +34,28 @@
                     </span>
                     {/if}
                 </div>
-                <div class="btn-group">
-                    <a class="btn btn-sm btn-default dropdown-toggle"
-                       data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                       wicket:message="title:coursegrade.header.menulabel"
-                       tabindex="-1">
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                        <li><a href="javascript:void(0);" class="gb-set-zero-score" role="menuitem"><wicket:message key="coursegrade.option.setungraded" /></a></li>
-                        <li>
-                            <a href="javascript:void(0);" class="gb-toggle-points" role="menuitem">
-                            {if settings.showPoints}
-                                <wicket:message key="coursegrade.option.hidepoints" />
-                            {else}
-                                <wicket:message key="coursegrade.option.showpoints" />
-                            {/if}
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                {if settings.instructor}
+                    <div class="btn-group">
+                        <a class="btn btn-sm btn-default dropdown-toggle"
+                           data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                           wicket:message="title:coursegrade.header.menulabel"
+                           tabindex="-1">
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                            <li><a href="javascript:void(0);" class="gb-set-zero-score" role="menuitem"><wicket:message key="coursegrade.option.setungraded" /></a></li>
+                            <li>
+                                <a href="javascript:void(0);" class="gb-toggle-points" role="menuitem">
+                                {if settings.showPoints}
+                                    <wicket:message key="coursegrade.option.hidepoints" />
+                                {else}
+                                    <wicket:message key="coursegrade.option.showpoints" />
+                                {/if}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                {/if}
             </div>
         </script>
         <script id="assignmentHeaderTemplate" type="text/template">
@@ -123,11 +125,15 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                        <li><a href="javascript:void(0);" class="edit-assignment-details" role="menuitem"><wicket:message key="assignment.option.edit" /></a></li>
+                        {if settings.instructor}
+                            <li><a href="javascript:void(0);" class="edit-assignment-details" role="menuitem"><wicket:message key="assignment.option.edit" /></a></li>
+                        {/if}
                         <li><a href="javascript:void(0);" class="gb-view-statistics" role="menuitem"><wicket:message key="assignment.option.viewgradestatistics" /></a></li>
-                        <li><a href="javascript:void(0);" class="gb-move-left" role="menuitem"><wicket:message key="assignment.option.moveleft" /></a></li>
-                        <li><a href="javascript:void(0);" class="gb-move-right" role="menuitem"><wicket:message key="assignment.option.moveright" /></a></li>
-                        {if !externallyMaintained}
+                        {if settings.instructor}
+                            <li><a href="javascript:void(0);" class="gb-move-left" role="menuitem"><wicket:message key="assignment.option.moveleft" /></a></li>
+                            <li><a href="javascript:void(0);" class="gb-move-right" role="menuitem"><wicket:message key="assignment.option.moveright" /></a></li>
+                        {/if}
+                        {if !externallyMaintained && settings.instructor}
                             <li><a href="javascript:void(0);" class="gb-set-ungraded" role="menuitem"><wicket:message key="assignment.option.setungraded" /></a></li>
                             <li><a href="javascript:void(0);" class="gb-delete-item" role="menuitem"><span class="text-danger"><wicket:message key="delete.label" /></span></a></li>
                         {/if}
@@ -200,18 +206,20 @@
                 <span class="gb-value">
                     ${value}
                 </span>
-                <div class="btn-group">
-                    <a class="btn btn-sm btn-default dropdown-toggle"
-                       data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                       wicket:message="title:coursegrade.cell.menulabel"
-                       tabindex="-1">
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                        <li><a href="javascript:void(0);" class="gb-course-grade-override" role="menuitem"><wicket:message key="coursegrade.option.override"/></a></li>
-                        <li><a href="javascript:void(0);" class="gb-course-grade-override-log" role="menuitem"><wicket:message key="coursegrade.option.overridelog"/></a></li>
-                    </ul>
-                </div>
+                {if GbGradeTable.settings.instructor}
+                    <div class="btn-group">
+                        <a class="btn btn-sm btn-default dropdown-toggle"
+                           data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                           wicket:message="title:coursegrade.cell.menulabel"
+                           tabindex="-1">
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                            <li><a href="javascript:void(0);" class="gb-course-grade-override" role="menuitem"><wicket:message key="coursegrade.option.override"/></a></li>
+                            <li><a href="javascript:void(0);" class="gb-course-grade-override-log" role="menuitem"><wicket:message key="coursegrade.option.overridelog"/></a></li>
+                        </ul>
+                    </div>
+                {/if}
             </div>
         </script>
         <script id="studentCellTemplate" type="text/template">
@@ -272,9 +280,11 @@
                                     <li class="gb-metadata-comment-notification">
                                         <span class="gb-flag-comment"></span> <wicket:message key="grade.notifications.hascomment"/>
                                         <blockquote><wicket:message key="grade.notifications.commentloading"/></blockquote>
-                                        <div>
-                                            <a href="javascript:void(0);" class="gb-edit-comments"><wicket:message key="grade.notifications.editcomment"/></a>
-                                        </div>
+                                        {if defined('readonly') && !readonly} 
+                                            <div>
+                                                <a href="javascript:void(0);" class="gb-edit-comments"><wicket:message key="grade.notifications.editcomment"/></a>
+                                            </div>
+                                        {/if}
                                     </li>
                                 {elseif notification.type == 'extra-credit'}
                                     <li>
