Show meaningful stuff when a concurrent edit is detected or a save is made to a concurrently edited record

--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -330,7 +330,7 @@
 }
 .gb-metadata dt {
   width: 80px !important;
-  color: #FE8;
+  color: #555;
 }
 .gb-metadata dd {
   margin-left: 90px !important;
