--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -305,9 +305,21 @@
                                         <span class="gb-flag-save-invalid"></span> <wicket:message key="grade.notifications.invalid"/>
                                     </li>
                                 {elseif notification.type == 'concurrent-edit'}
+                                    {if notification.showSaveError}
+                                        <li>
+                                            <span class="gb-flag-save-error"></span> <wicket:message key="grade.notifications.haserror"/>
+                                        </li>
+                                    {/if}
                                     <li>
                                         <span class="gb-flag-concurrent-edit"></span> <wicket:message key="grade.notifications.concurrentedit"/>
-                                        <pre>${JSON.stringify(notification.conflict)}</pre>
+                                        {if notification.conflict}
+                                            <dl class="dl-horizontal">
+                                                <dt><wicket:message key="grade.notifications.concurrentedituser"/></dt>
+                                                <dd>${notification.conflict.lastUpdatedBy}</dd>
+                                                <dt><wicket:message key="grade.notifications.concurrentedittime"/></dt>
+                                                <dd>${new Date(notification.conflict.lastUpdated).toLocaleTimeString()}</dd>
+                                            </dl>
+                                        {/if}
                                     </li>
                                 {elseif notification.type == 'external'}
                                     <li class="gb-external-app-wrapper">
