Disable Student Grade Summary for TAs as any restriction will result in a service security error (intructor access is required to aggregate all grades etc)

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -106,7 +106,6 @@
                     <span>${dueDate}</span>
                 </div>
                 <div class="gb-grade-item-flags">
-                    <!-- TODO popover -->
                     {if released}
                         <span class="gb-flag-released" wicket:message="title:label.gradeitem.released"></span>
                     {else}
@@ -145,7 +144,7 @@
             <span class="colHeader hide">${col}</span>
             <div class="relative">
                 {if extraCredit}
-                    <span class="gb-flag-extra-credit" wicket:message="title:label.gradeitem.extracredit"></span>
+                    <span class="gb-flag-extra-credit" wicket:message="title:label.gradeitem.extracreditcategory"></span>
                 {/if}
                 <a class="gb-title">
                     <span class="gb-category">
