--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -44,15 +44,17 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" role="menu">
                             <li><a href="javascript:void(0);" class="gb-set-zero-score" role="menuitem"><wicket:message key="coursegrade.option.setungraded" /></a></li>
-                            <li>
-                                <a href="javascript:void(0);" class="gb-toggle-points" role="menuitem">
-                                {if settings.showPoints}
-                                    <wicket:message key="coursegrade.option.hidepoints" />
-                                {else}
-                                    <wicket:message key="coursegrade.option.showpoints" />
-                                {/if}
-                                </a>
-                            </li>
+                            {if !settings.isCategoryTypeWeighted}
+                                <li>
+                                    <a href="javascript:void(0);" class="gb-toggle-points" role="menuitem">
+                                    {if settings.showPoints}
+                                        <wicket:message key="coursegrade.option.hidepoints" />
+                                    {else}
+                                        <wicket:message key="coursegrade.option.showpoints" />
+                                    {/if}
+                                    </a>
+                                </li>
+                            {/if}
                         </ul>
                     </div>
                 {/if}
