CLASSES-2812 fix caption in handsontable causing rendering issues in firefox

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -373,7 +373,7 @@
             <wicket:message key="assignment.menulabel"/>
         </script>
         <script id="captionTemplate" type="text/template">
-            <caption id="gradeTableCaption">
+            <div id="gradeTableCaption">
                 <div class="container-fluid">
                     <div class="sr-only row">
                         <h4><wicket:message key="gradetable.caption.summaryheader"/></h4>
@@ -400,7 +400,7 @@
                         </div>
                     </div>
                 </div>
-            </caption>
+            </div>
         </script>
     </wicket:panel>
 </html>
