CLASSES-2798 allow the toolbar buttons to wrap and still be clicky

--- a/gradebookng/tool/src/webapp/styles/gradebook-grades.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-grades.css
@@ -27,8 +27,7 @@
   overflow: visible;
   padding: 0 0.4em;
   width: 100%;
-  white-space: nowrap; /* don't wrap so it stays on one line */
-  height: 40px;
+  margin: 0;
 }
 #gradebookGradesToolbar ul {
   list-style: none;
